fix google recaptcha badge div cause RWD page width overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body {
 }
 
 html, body {
-  overflow-x:hidden
+  overflow-x: hidden;
 }
 
 .button {
@@ -577,11 +577,7 @@ to   { opacity: 1; }
   .nav-icon:hover div {
     transform: scale(0);
   }
-
-  .grecaptcha-badge {
-    opacity: 0;
-  }
-
+  
   ._title {
     padding-top: 24px;
     padding-bottom: 24px;
